# maneko

./: .gitignore  Cargo.toml  NOTICE  README.md
.cargo/: config.toml
crates/core/: Cargo.toml
crates/core/src/: audio.rs  lib.rs  ops.rs  quant.rs  rope.rs  wnorm.rs
crates/interfaces/cli/: Cargo.toml
crates/interfaces/cli/src/: lib.rs  main.rs  voice.rs
crates/interfaces/cli/src/commands/: generate.rs
crates/interfaces/cli/tests/: cli_tests.rs
crates/interfaces/python/: Cargo.toml  README.md  pyproject.toml  test_bindings.py
crates/interfaces/python/.cargo/: config.toml
crates/interfaces/python/src/: lib.rs
crates/models/irodori/: Cargo.toml
crates/models/irodori/src/: blocks.rs  config.rs  dacvae.rs  dit.rs  duration.rs  encoders.rs  engine.rs  lib.rs  sampler.rs  text.rs  weights.rs
crates/models/irodori/tests/: dacvae_tests.rs  dit_tests.rs  duration_tests.rs  e2e_tests.rs  encoders_tests.rs  sampler_tests.rs  text_tests.rs
crates/models/mio/: Cargo.toml
crates/models/mio/src/: config.rs  engine.rs  lib.rs  sampler.rs  text.rs  weights.rs
crates/models/mio/src/codec/: fsq.rs  istft.rs  mod.rs  resnet.rs  transformer.rs
crates/models/mio/src/encoder/: global.rs  mod.rs  resample.rs
crates/models/mio/src/falcon/: attention.rs  mamba2.rs  mod.rs  rope.rs
crates/models/mio/tests/: ar_tests.rs  codec_tests.rs  e2e_tests.rs  encoder_tests.rs
crates/models/pocket/: Cargo.toml
crates/models/pocket/config/: english.yaml  english_2026-01.yaml  english_2026-04.yaml  french_24l.yaml  german.yaml  german_24l.yaml  italian.yaml  italian_24l.yaml  portuguese.yaml  portuguese_24l.yaml  spanish.yaml  spanish_24l.yaml
crates/models/pocket/src/: audio.rs  config.rs  engine.rs  lib.rs  pause.rs  qweights.rs  tts_model.rs  voice.rs  weights.rs
crates/models/pocket/src/conditioners/: text.rs
crates/models/pocket/src/models/: flow_lm.rs  mimi.rs  seanet.rs  transformer.rs
crates/models/pocket/src/modules/: attention.rs  conv.rs  mlp.rs
crates/models/pocket/tests/: integration_tests.rs  memory_usage.rs  parity_tests.rs  streaming_tests.rs
