# maneko — unified Rust/Candle TTS engine (pocket-tts + Irodori).
# Seeded from babybirdprd/pocket-tts (MIT); see NOTICE for attribution.
[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/models/*",
    "crates/interfaces/*",
]
# the python wheel (pyo3) needs a Python toolchain; keep it out of the default `cargo build`.
default-members = [
    "crates/core",
    "crates/models/pocket",
    "crates/models/irodori",
    "crates/interfaces/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["maneko contributors"]
license = "AGPL-3.0-or-later"
# Placeholder — no remote yet; update when the repo is published.
repository = "https://github.com/ziweih/maneko"
keywords = ["tts", "candle", "speech-synthesis", "audio"]
categories = ["multimedia::audio", "science"]

[workspace.dependencies]
# Bumped from the seed's 0.9.1 to current (P0). candle-transformers was unused — dropped.
candle-core = "0.10.2"
candle-nn = "0.10.2"
safetensors = "0.5.2"
hf-hub = "0.4.3"
anyhow = "1.0"
thiserror = "2.0"
hound = "3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
byteorder = "1.5"
memmap2 = "0.9"
clap = { version = "4.5", features = ["derive"] }
tokenizers = { version = "0.21.0", default-features = false }
axum = "0.7"
tokio = "1.0"
tower = "0.4"
tower-http = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
# Intel-only; pulled in only when the `mkl` feature is enabled (see crates/pocket-tts).
# Keeping it unconditional (as the seed did) breaks Apple-Silicon builds.
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
rand = "0.8"
rand_distr = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true
