[package]
name = "tts-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared primitives for maneko's TTS engines (ops, conv, attention, audio, weights, device)."
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = []
mkl = ["candle-core/mkl", "candle-nn/mkl"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]
metal = ["candle-core/metal", "candle-nn/metal"]

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
anyhow.workspace = true
hound.workspace = true
