[package]
name = "tts-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for the maneko TTS engines"
keywords.workspace = true
categories.workspace = true

[lib]
name = "tts_cli"
path = "src/lib.rs"

[[bin]]
name = "tts"
path = "src/main.rs"

[features]
default = []
quantized = ["pocket/quantized"]
metal = ["pocket/metal", "irodori/metal", "tts-core/metal"]
mkl = ["pocket/mkl", "irodori/mkl", "tts-core/mkl"]
accelerate = ["pocket/accelerate", "irodori/accelerate", "tts-core/accelerate"]

[dependencies]
pocket = { path = "../../models/pocket" }
irodori = { path = "../../models/irodori" }
tts-core = { path = "../../core" }
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
owo-colors = "4"
candle-core.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
hound = "3.5"
