[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "maneko"
version = "0.1.0"
description = "Native Rust/Candle TTS engines (pocket-tts + Irodori) with Python bindings"
requires-python = ">=3.9"
dependencies = [
    "huggingface_hub",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "maneko"
# macOS-only distribution: build fast CPU (accelerate) + GPU (metal) by default, so a from-source
# `uv`/`pip` install (PEP 517) gets both backends — pick the device at runtime via `Irodori(device=)`.
features = ["pyo3/extension-module", "accelerate", "metal"]
