[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "maneko"
version = "0.1.0"
description = "Native Rust/Candle TTS engines (pocket-tts + Irodori) with Python bindings"
requires-python = ">=3.9"
dependencies = [
    "huggingface_hub",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "maneko"
# Default to a portable CPU build (q8 + AVX2 on x86 via .cargo/config.toml; NEON on aarch64) so a
# plain `uv`/`pip` install works on any mac with no extra frameworks. Accelerate/Metal are opt-in:
# on Intel they give no speedup (benchmarked: Accelerate ≈ gemm) and Accelerate pulls a framework
# link. Apple Silicon: build `--features accelerate,metal` for AMX + GPU, pick device at runtime.
features = ["pyo3/extension-module"]
