[package]
name = "irodori"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Irodori — Japanese TTS engine (DiT + DAC-VAE) for maneko. Port in progress."
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = []
mkl = ["candle-core/mkl", "candle-nn/mkl", "tts-core/mkl"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "tts-core/accelerate"]
metal = ["candle-core/metal", "candle-nn/metal", "tts-core/metal"]

[dependencies]
tts-core = { path = "../../core" }
candle-core.workspace = true
candle-nn.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
hf-hub.workspace = true
tracing.workspace = true
# llm-jp tokenizer (tokenizer.json); onig for its pre-tokenizer regex.
tokenizers = { workspace = true, features = ["onig"] }

[dev-dependencies]
candle-core.workspace = true
anyhow.workspace = true
