[package]
name = "mio-tts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MioTTS — fast Japanese TTS engine (Falcon-H1 codec-LM + MioCodec) for maneko. Port in progress."
keywords.workspace = true
categories.workspace = true

[lib]
name = "mio_tts"
crate-type = ["rlib"]

[features]
default = []
mkl = ["candle-core/mkl", "candle-nn/mkl", "tts-core/mkl"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "tts-core/accelerate"]
metal = ["candle-core/metal", "candle-nn/metal", "tts-core/metal"]

[dependencies]
tts-core = { path = "../../core" }
candle-core.workspace = true
candle-nn.workspace = true
anyhow.workspace = true
hf-hub.workspace = true
tracing.workspace = true
# Falcon-H1 multilingual BPE tokenizer (tokenizer.json); onig for its pre-tokenizer regex.
tokenizers = { workspace = true, features = ["onig"] }
# Inverse real FFT for the MioCodec iSTFT head (already transitive in the workspace).
realfft = "3"
# Seeded temperature / top-p sampling for AR generation (greedy needs no RNG).
rand.workspace = true

[dev-dependencies]
candle-core.workspace = true
anyhow.workspace = true
tts-core = { path = "../../core" }
