[package]
name = "pocket"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CPU-first Text-to-Speech engine (pocket-tts) on Candle"
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = []
mkl = ["candle-core/mkl", "candle-nn/mkl", "dep:intel-mkl-src"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]
metal = ["candle-core/metal", "candle-nn/metal"]
quantized = []

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
safetensors.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
byteorder.workspace = true
# SentencePiece via the tokenizers crate (avoids the sentencepiece/protobuf/onnx conflict).
tokenizers = { workspace = true, features = ["fancy-regex", "onig", "progressbar", "http"] }
lenient_semver = "0.4.2"
rubato = "0.14.1"
regex = "1"
hound.workspace = true
rand.workspace = true
rand_distr.workspace = true
rayon = "1.11.0"
tracing.workspace = true
hf-hub.workspace = true
memmap2.workspace = true
# Intel-only BLAS; only linked when the `mkl` feature is on (keeps Apple Silicon buildable).
intel-mkl-src = { workspace = true, optional = true }

[dev-dependencies]
candle-core.workspace = true
anyhow.workspace = true
